--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,29 @@
     --delay-offset: 100ms;
   }
 
+  [type='text'],
+  [type='email'],
+  [type='url'],
+  [type='password'],
+  [type='number'],
+  [type='date'],
+  [type='datetime-local'],
+  [type='month'],
+  [type='search'],
+  [type='tel'],
+  [type='time'],
+  [type='week'],
+  [multiple],
+  textarea,
+  select {
+    @apply h-full border-borderColor focus:border-activeBorderColor focus:ring-activeBorderColor bg-mainBgColor text-textColor;
+  }
+
+  [type='checkbox'],
+  [type='radio'] {
+    @apply border-borderColor text-activeBorderColor focus:ring-activeBorderColor;
+  }
+
   .html,
   body {
     height: 100%;
@@ -20,18 +43,30 @@
   }
 
   section h2 {
-    @apply text-mainColor;
-    @apply font-bold;
-    @apply text-3xl;
-    @apply md:text-4xl;
-    @apply lg:text-5xl;
-    @apply xl:text-6xl;
-    @apply mb-10;
-    @apply from:opacity-0;
-    @apply from:translate-x-5;
-    @apply duration-500;
-    @apply delay-200;
-    @apply text-center;
+    @apply text-mainColor 
+    font-bold 
+    text-3xl 
+    md:text-4xl 
+    lg:text-5xl 
+    xl:text-6xl 
+    mb-10 
+    from:opacity-0 
+    from:translate-x-5 
+    duration-500 
+    delay-200 
+    text-center;
+  }
+
+  button.fill-hover {
+    @apply px-6 py-2 border-[1px] border-borderColor;
+  }
+
+  button.fill-hover:hover {
+    @apply text-contentTextColor;
+  }
+
+  button::before {
+    z-index: -1;
   }
 
   .fill-hover:hover {
